# OpenCAL

./: .gitignore  .readthedocs.yaml  20-2020-Black-25-CL.stp.SLDPRT  20-2020-Black-25-CLShort.stp.SLDPRT  2020Block.SLDBLK  BallBearing.SLDPRT  Belt.SLDPRT  CLAUDE.md  CMakeLists.txt  Collet with Gear and Toolholder.SLDASM  Collet.SLDPRT  ColletStageHousing.SLDPRT  LICENSE  MB6090_M-Solidworks.SLDPRT  NemaAdjustableArm.SLDPRT  OpenCAL Assembly v3.2.SLDASM  OpenCALAssembly.SLDASM  OpenCALlogo.SLDBLK  OpenCal BoM.xlsx  PH50_M-Solidworks.sldprt  ProjectorBaseFrame.SLDPRT  RC1-Solidworks.sldprt  README.md  README.rst  RLA150_M-Solidworks.sldprt  Rotation Stage Bottom Plate.SLDPRT  RotationStage.SLDPRT  Stepper with GT2 Pulley and Closed-Loop Belt.SLDASM  StepperAdaptorPattern.SLDBLK  StepperMotor Control.py  T-Nut 20 M5 v1.step.smg  TR75_M-Solidworks.sldprt  ToolHolderHousing2.SLDPRT  VerticalStage.SLDPRT  VerticalStageAssembly.v2.SLDASM  ZStageAssm.SLDASM  apt-requirements.txt  apt_requirements.txt  camera_test.py  crc_test.py  (+15 more)
.builder/: config.yaml
Assembly v1/: 13031_m.stp  40-4012-25-CL.stp  40-4012-25-CL.stp.SLDPRT  40-4012.SLDPRT  4012CrossSection.SLDBLK  ER32-20.STEP  MB60120_M-Solidworks.SLDPRT  README.rst  StepperStagePlate.SLDPRT  ToolHolder.SLDPRT  ToolHolderHousing.SLDPRT
Assembly v2/: 20-2020-Black-25-CL.stp.SLDPRT  20-2020-Black-25-CLShort.stp.SLDPRT  BallBearing.SLDPRT  ER32 COLLET NUT.SLDPRT  ER32-20.step.SLDPRT  Nema17.SLDPRT  NemaAdjustableArm.SLDPRT  ToolHolderHousing2.SLDPRT  VerticalStage.SLDPRT  VerticalStageAssembly.v2.SLDASM  (+2 more)
Collets/: Collet.SLDPRT  (+2 more)
(+135 files in other folders)
