[project]
name = "opencal"
version = "0.1.0"
description = "OpenCAL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gpiozero>=2.0.1",
    "ipython>=9.10.0",
    "lgpio>=0.2.2.0",
    "opencv-python>=4.13.0.90",
    "pi5neo>=1.0.6",
    "rplcd>=1.4.0",
    "smbus2>=0.6.0",
]


[tool.ruff]
line-length = 100
